add plop to ease with boilerplate generation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-links": "^3.2.6",
     "@storybook/addon-storyshots": "^3.2.8",
     "@storybook/react": "^3.2.8",
+    "plop": "^1.8.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
