--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ceramic-ui",
   "version": "0.1.0",
-  "private": true,
   "peerDependencies": {
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -10,12 +9,10 @@
     "styled-components": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public -o docs"
+    "build": "babel src -d dist --source-maps",
+    "build-docs": "build-storybook -o docs",
+    "start": "start-storybook -p 9009",
+    "test": "jest --watch --env=jsdom"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.6",
@@ -24,11 +21,17 @@
     "@storybook/addon-links": "^3.2.6",
     "@storybook/addon-storyshots": "^3.2.8",
     "@storybook/react": "^3.2.8",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^21.0.0",
+    "babel-plugin-styled-components": "^1.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^21.0.1",
     "plop": "^1.8.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
     "react-test-renderer": "^15.6.1",
     "styled-components": "^2.1.2"
   }
