--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "styled-components": "^2.1.2"
   },
   "scripts": {
-    "build": "babel src -d dist --source-maps",
+    "build": "BABEL_ENV=production babel src -d dist",
     "build-docs": "build-storybook -o docs",
     "start": "start-storybook -p 9009",
     "test": "jest --watch --env=jsdom"
@@ -24,6 +24,7 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^21.0.0",
     "babel-plugin-styled-components": "^1.2.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
