--- a/package.json
+++ b/package.json
@@ -1,44 +1,12 @@
 {
   "name": "ceramic-ui",
-  "version": "0.1.0",
-  "peerDependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
-    "styled-components": "^2.1.2"
-  },
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build:main": "BABEL_ENV=production babel src -d dist --source-maps",
-    "build:umd": "BABEL_ENV=umd babel src -d umd --source-maps",
-    "build:docs": "build-storybook -o docs",
-    "build": "npm-run-all build:main build:umd build:docs",
-    "start": "start-storybook -p 9009",
-    "test": "jest --watch --env=jsdom"
+    "build": "lerna run build && rm -rf docs && mv packages/web/docs ."
   },
+  "workspaces": ["packages/web"],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.6",
-    "@storybook/addon-info": "^3.2.9",
-    "@storybook/addon-knobs": "^3.2.8",
-    "@storybook/addon-links": "^3.2.6",
-    "@storybook/addon-storyshots": "^3.2.8",
-    "@storybook/react": "^3.2.8",
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^21.0.0",
-    "babel-plugin-styled-components": "^1.2.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "jest": "^21.0.1",
-    "plop": "^1.8.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
-    "styled-components": "^2.1.2"
-  },
-  "dependencies": {
-    "npm-run-all": "^4.1.1"
+    "lerna": "^2.1.2"
   }
 }
