--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,14 +31,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^21.0.1",
+    "npm-run-all": "^4.1.1",
     "plop": "^1.8.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "styled-components": "^2.1.2"
-  },
-  "dependencies": {
-    "npm-run-all": "^4.1.1"
   }
 }
