--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,17 @@
 {
   "name": "@ceramic-ui/web",
   "version": "0.1.0",
+  "description": "React UI Toolkit",
+  "homepage": "https://github.com/ceramic-ui/ceramic-ui",
+  "bugs": {
+    "url": "https://github.com/ceramic-ui/ceramic-ui/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
+  },
+  "license": "MIT",
+  "keywords": ["react", "ui", "styled-components"],
   "peerDependencies": {
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
