create seperate test + watch npm script

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,9 +24,10 @@
     "build:umd": "BABEL_ENV=umd babel src -d umd --source-maps",
     "build:docs": "build-storybook -o docs",
     "build": "npm-run-all build:main build:umd build:docs",
-    "prepublish": "npm run build",
+    "prepublish": "npm run test && npm run build",
     "start": "start-storybook -p 9009",
-    "test": "jest --watch --env=jsdom"
+    "test": "jest --env=jsdom",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.6",
