add missing publish config

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,9 @@
   },
   "license": "MIT",
   "keywords": ["react", "ui", "styled-components"],
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
