--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,11 +11,7 @@
     "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
   },
   "license": "MIT",
-  "keywords": [
-    "react",
-    "ui",
-    "styled-components"
-  ],
+  "keywords": ["react", "ui", "styled-components"],
   "publishConfig": {
     "access": "public"
   },
@@ -23,7 +19,6 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
     "styled-components": "^2.1.2"
   },
   "scripts": {
