--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,6 +49,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "downshift": "^1.6.0",
     "jest": "^21.0.1",
     "npm-run-all": "^4.1.1",
     "plop": "^1.8.1",
