--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,11 +11,7 @@
     "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
   },
   "license": "MIT",
-  "keywords": [
-    "react",
-    "ui",
-    "styled-components"
-  ],
+  "keywords": ["react", "ui", "styled-components"],
   "publishConfig": {
     "access": "public"
   },
@@ -33,7 +29,8 @@
     "prepublish": "npm run test && npm run build",
     "start": "start-storybook -p 9009",
     "test": "jest --env=jsdom",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "lint": "eslint -c .eslintrc.js src"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.6",
@@ -50,6 +47,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "downshift": "^1.6.0",
+    "eslint": "^4.7.1",
+    "eslint-plugin-react": "^7.3.0",
     "jest": "^21.0.1",
     "npm-run-all": "^4.1.1",
     "plop": "^1.8.1",
