--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,7 +11,11 @@
     "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
   },
   "license": "MIT",
-  "keywords": ["react", "ui", "styled-components"],
+  "keywords": [
+    "react",
+    "ui",
+    "styled-components"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -30,7 +34,8 @@
     "start": "start-storybook -p 9009",
     "test": "jest --env=jsdom",
     "test:watch": "npm run test -- --watch",
-    "lint": "eslint -c .eslintrc.js src"
+    "lint": "eslint -c .eslintrc.js src",
+    "prettier": "prettier --write \"src/**/*.js\""
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.6",
@@ -52,6 +57,7 @@
     "jest": "^21.0.1",
     "npm-run-all": "^4.1.1",
     "plop": "^1.8.1",
+    "prettier": "^1.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
