--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "lerna run build && rm -rf docs && mv packages/web/docs ."
   },
-  "workspaces": ["packages/web"],
+  "workspaces": ["packages/*"],
   "devDependencies": {
     "lerna": "^2.1.2"
   }
