--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ceramic-ui/web",
-  "version": "0.9.1",
+  "version": "0.10.0",
   "description": "React UI Toolkit",
   "homepage": "https://github.com/ceramic-ui/ceramic-ui",
   "bugs": {
@@ -11,7 +11,11 @@
     "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
   },
   "license": "MIT",
-  "keywords": ["react", "ui", "styled-components"],
+  "keywords": [
+    "react",
+    "ui",
+    "styled-components"
+  ],
   "publishConfig": {
     "access": "public"
   },
