--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,7 +11,11 @@
     "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
   },
   "license": "MIT",
-  "keywords": ["react", "ui", "styled-components"],
+  "keywords": [
+    "react",
+    "ui",
+    "styled-components"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -34,29 +38,29 @@
     "prettier": "prettier --write \"src/**/*.js\""
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.6",
-    "@storybook/addon-knobs": "^3.2.8",
-    "@storybook/addon-links": "^3.2.6",
-    "@storybook/addon-storyshots": "^3.2.8",
-    "@storybook/react": "^3.2.8",
+    "@storybook/addon-actions": "^3.2.11",
+    "@storybook/addon-knobs": "^3.2.10",
+    "@storybook/addon-links": "^3.2.10",
+    "@storybook/addon-storyshots": "^3.2.11",
+    "@storybook/react": "^3.2.11",
     "babel-cli": "^6.26.0",
-    "babel-jest": "^21.0.0",
+    "babel-jest": "^21.2.0",
     "babel-plugin-styled-components": "^1.2.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "downshift": "^1.6.0",
-    "eslint": "^4.7.1",
-    "eslint-plugin-react": "^7.3.0",
-    "jest": "^21.0.1",
+    "downshift": "^1.10.1",
+    "eslint": "^4.8.0",
+    "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1",
     "npm-run-all": "^4.1.1",
     "plop": "^1.8.1",
-    "prettier": "^1.7.0",
+    "prettier": "^1.7.3",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
-    "styled-components": "^2.1.2"
+    "styled-components": "^2.2.0"
   }
 }
