--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,11 +11,7 @@
     "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
   },
   "license": "MIT",
-  "keywords": [
-    "react",
-    "ui",
-    "styled-components"
-  ],
+  "keywords": ["react", "ui", "styled-components"],
   "publishConfig": {
     "access": "public"
   },
@@ -32,7 +28,7 @@
     "build": "run-p build:main build:umd build:docs",
     "prepublish": "run-s lint test build",
     "start": "start-storybook -p 9009",
-    "test": "jest --env=jsdom",
+    "test": "jest",
     "test:watch": "npm run test -- --watch",
     "lint": "eslint -c .eslintrc.js src",
     "prettier": "prettier --write \"src/**/*.js\""
@@ -62,5 +58,9 @@
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
     "styled-components": "^2.2.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFiles": ["./src/jest.setup.js"]
   }
 }
