--- a/packages/looky/package.json
+++ b/packages/looky/package.json
@@ -11,15 +11,27 @@
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
     "build:es": "tsc -p ./tsconfig.es.json",
     "build": "npm run build:cjs && npm run build:es",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest"
   },
+  "files": ["dist"],
   "dependencies": {
     "dlv": "^1.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^22.2.0",
+    "jest": "^22.4.2",
+    "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.9.0",
     "tslint-plugin-prettier": "^1.3.0",
     "typescript": "^2.7.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
   }
 }
