--- a/packages/looky/tsconfig.json
+++ b/packages/looky/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "es2015",
+    "module": "commonjs",
     "declaration": true,
     "sourceMap": true,
     "removeComments": true,
