--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,11 +11,7 @@
     "url": "git+https://github.com/ceramic-ui/ceramic-ui.git"
   },
   "license": "MIT",
-  "keywords": [
-    "react",
-    "ui",
-    "styled-components"
-  ],
+  "keywords": ["react", "ui", "styled-components"],
   "publishConfig": {
     "access": "public"
   },
@@ -30,7 +26,7 @@
     "build:umd": "BABEL_ENV=umd babel src -d umd --source-maps",
     "build:docs": "build-storybook -o docs",
     "build": "run-p build:main build:umd build:docs",
-    "prepublish": "run-s lint test build",
+    "prepublishOnly": "run-s lint test build",
     "start": "start-storybook -p 9009",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
@@ -65,8 +61,6 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "setupFiles": [
-      "./src/jest.setup.js"
-    ]
+    "setupFiles": ["./src/jest.setup.js"]
   }
 }
