--- a/packages/looky/package.json
+++ b/packages/looky/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ceramic-ui/looky",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Responsively use values from your theme in your css-in-js",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -21,7 +21,9 @@
     "prepublishOnly": "npm run build",
     "test": "jest"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -42,6 +44,13 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
